<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_bg"
    >
  <include
      layout="@layout/bar_layout"
      android:id="@+id/title_lay"
      />
  <TextView
      android:id="@+id/bound_phone_describe_tv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/title_lay"
      android:gravity="center_horizontal"
      android:layout_marginTop="@dimen/point"
      android:layout_marginBottom="@dimen/point"
      android:textColor="@color/text_color_33"
      android:textSize="@dimen/sp_12"
      android:text="@string/bound_phone_describe_txt"/>
  <LinearLayout
      android:id="@+id/phone_ll"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/bound_phone_describe_tv"
      android:background="@drawable/two_border_bg"
      android:paddingLeft="@dimen/dp_16"
      android:paddingRight="@dimen/dp_16"
      android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:minEms="4"
        android:textColor="@color/text_color_33"
        android:textSize="@dimen/sp_14"
        android:text="@string/user_mobile_txt"/>
    <EditText
        android:id="@+id/input_phone_et"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/input_hint_txt"
        android:background="@null"
        android:inputType="number"
        android:maxLength="11"
        android:textColor="@color/text_color_33"
        android:textSize="@dimen/sp_14"
        />
  </LinearLayout>

  <RelativeLayout
      android:id="@+id/code_rl"
      android:layout_width="match_parent"
      android:layout_height="45dp"
      android:layout_below="@+id/phone_ll"
      android:background="@drawable/bottom_border_bg"
      android:paddingLeft="@dimen/dp_16"
      android:paddingRight="@dimen/dp_16">
    <TextView
        android:id="@+id/code_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:minEms="4"
        android:gravity="center_vertical"
        android:textColor="@color/text_color_33"
        android:textSize="@dimen/sp_14"
        android:text="@string/input_code_title_txt"/>
    <Button
        android:id="@+id/get_code_bt"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/point"
        android:paddingRight="@dimen/point"
        android:background="@drawable/rectangle_border_orange_corner6_transparency"
        android:text="@string/get_code_txt"
        android:textColor="@color/bg_color"
        android:textSize="@dimen/sp_14"
        />
    <EditText
        android:id="@+id/input_code_et"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_toLeftOf="@+id/get_code_bt"
        android:layout_toRightOf="@+id/code_title_tv"
        android:background="@null"
        android:inputType="number"
        android:maxLength="6"
        android:hint="@string/input_hint_txt"
        android:textColor="@color/text_color_33"
        android:textSize="@dimen/sp_14"
        />
  </RelativeLayout>
  <Button
      android:id="@+id/submit_bt"
      android:layout_width="match_parent"
      android:layout_height="45dp"
      android:background="@drawable/rectangle_round_corner6_orange"
      android:layout_below="@+id/code_rl"
      android:layout_marginLeft="@dimen/dp_16"
      android:layout_marginRight="@dimen/dp_16"
      android:layout_marginTop="32dp"
      android:layout_marginBottom="32dp"
      android:textSize="16sp"
      android:textColor="@color/white"
      android:text="@string/submit_txt"/>

</RelativeLayout>