<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rectangle_round_corner8_white">
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:background="@color/transparency"
      android:layout_marginTop="32dp"
      android:layout_marginBottom="32dp"
      android:includeFontPadding="false"
      android:text="@string/point_exchange_title_txt"
      android:textColor="@color/text_color_33"
      android:textSize="16sp"
      />
  <TextView
      android:id="@+id/point_exchange_rule_tv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:background="@color/transparency"
      android:lineSpacingExtra="16dp"
      android:includeFontPadding="false"
      android:text="sdf"
      android:textColor="@color/text_color_66"
      android:textSize="14sp"
      />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:background="@drawable/top_border_bg"
      android:orientation="horizontal">
    <Button
        android:id="@+id/point_exchange_cancel_bt"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:background="@color/transparency"
        android:textColor="@color/text_color_99"
        android:textSize="16sp"
        android:text="@string/point_exchange_cancle_txt"/>
    <Button
        android:id="@+id/point_exchange_go_bt"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:background="@drawable/left_border_bg"
        android:textColor="@color/theme_blue"
        android:textSize="16sp"
        android:text="@string/point_exchange_go_txt"/>
    <Button
        android:id="@+id/point_exchange_affirm_bt"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:background="@drawable/left_border_bg"
        android:textColor="@color/theme_blue"
        android:textSize="16sp"
        android:text="@string/point_exchange_affirm_txt"
        android:visibility="gone"/>
  </LinearLayout>


</LinearLayout>