<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_item"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/dp_8">
    <TextView
        android:id="@+id/untiket_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unticket_buy"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/text_color_33"/>
    <TextView
        android:id="@+id/untiket_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unticket_buy"
        android:textSize="14sp"
        android:layout_below="@+id/untiket_title"
        android:layout_marginTop="5dp"
        android:textColor="@color/text_color_99"/>
    <TextView
        android:id="@+id/untiket_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/untiket_number"
        android:textColor="@color/theme_blue"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/untiket_text"
        android:layout_marginRight="4dp"/>
    <TextView
        android:id="@+id/untiket_text"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/unticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/dp_8"
        android:drawableRight="@drawable/new_goin"/>
</RelativeLayout>